--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/per-pj/portfolio-posts#readme",
   "dependencies": {
+    "dotenv": "^16.4.7",
     "node-fetch": "^2.6.1"
   }
 }
